# GestArt2

./: .gitignore  CMakeLists.txt  Gant.planner  TrainingData.txt  TrainingDataFormes.txt  TrainingDataRalo.txt  User3d.pde  gestFile.txt  installer.sh  run.sh  shader.fs  shader.vs  toto
Code_Amr/: ._Delicode_NI_mate_Oculus_Bunny.blend  ._Delicode_NI_mate_Simple_Bunny.blend  ._kinect_flow  ._livingmap
Code_Amr/kinect_flow/: kinect_flow.pde
Code_Amr/livingmap/: ._Server.pde  Swipe.pde  livingmap.pde
Code_Amr/livingmap/html/: ._db.php  ._expo.json  ._feedback.php  ._get.php  ._index.html  ._index.php  ._test.html  db.php  expo.json  feedback.php  get.php  index.html  index.php  test.html
Code_Amr/skeleton_tracking/: skeleton_tracking.pde
Images/3D/: Scotty.blend
Modele/: Scotty.3ds  Scotty.blend  Scotty.blend1  Scotty3ds.3ds  ScottyMove1.blend  alambic.3ds  avant_bras.3ds  avant_brasD.3ds  avant_brasG.3ds  bassin.3ds  bras.3ds  brasD.3ds  brasG.3ds  chaise1.3ds  chaise2.3ds  etageres.3ds  fiole1.3ds  fiole2.3ds  fiole3.3ds  fiole4.3ds  jambe.3ds  mollet.3ds  scene.3ds  table.3ds  tete.3ds  torse.3ds
ProgrammesReco/Recognize/: testApp.cpp
ProgrammesReco/Register/: testApp.cpp  testApp.h
Ressources/: gestFile.txt
Scenario/: MonScenario.txt  Ontario2.txt  scenarioFormes.txt  scenarioObjet.txt  scenarioSoutenance.txt
Scenario/Activite/: ActiviteForme.txt  ActiviteObjet.txt
Scenario/Activity/: ActiviteForme.txt  ActiviteObjet.txt
TestPosition2/: TestPosition2.pde
User3d/: User3d.pde
Video/: Alex.avi  Bravo.avi  EssaieEncore.avi  Montrepeno.avi  Montreralo.avi  Presque.avi  carre.avi  gagne.avi  peno.avi  perdu.avi  ralo.avi  triangle.avi
mouvements/: olfa  positions.txt  positions2.txt  positions3.txt  positionsSimple.txt
of_mac/apps/myApps/: of_v
osc/examples/: ReceiveProcessing.cpp
osc/srcProgReco/: SynapseStreamer.cpp  SynapseStreamer.cpp~  SynapseStreamer.h  main.cpp  testApp.cpp  testApp.cpp~
oscpack/: Makefile
pointsMain/: pointsMain.pde
src/Controler/Base/: main.cpp  main2.cpp  tutoMain.cpp
src/Controler/Kinect/: Of.cpp  Of.hpp  Osc.cpp  Osc.hpp  Parser.cpp  Parser.hpp  Processing.cpp  Processing.hpp
src/Controler/Video/: Video.cpp  Video.hpp
src/Controller/Base/: main.cpp
src/Controller/Kinect/: Of.cpp  Of.hpp  Osc.cpp  Osc.hpp  Parser.cpp  Parser.hpp  Processing.cpp  Processing.hpp
src/Controller/Video/: Video.cpp  Video.hpp
src/Model/Account/: Admin.cpp  Admin.hpp  gestFile.txt
src/Model/Game/: Game.cpp  Game.hpp
src/Model/Item/: Item.cpp  Item.hpp
src/Model/Jeu/: Game.cpp  Game.hpp
src/Model/Movement/: GesturesMap.cpp  GesturesMap.hpp  MapGestes.cpp  MapGestes.hpp
src/Model/OpenGL/: Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Scene.cpp  Scene.hpp  Segment.cpp  Segment.hpp  Skeleton.cpp  Skeleton.hpp  Squelette.cpp  Squelette.hpp  geom.hpp  math_3d.cpp  math_3d.h
src/Model/Scenario/: Activite.cpp  Activite.hpp  ActiviteForme.cpp  ActiviteForme.hpp  ActiviteFormes.cpp  ActiviteFormes.hpp  ActiviteInfo.hpp  ActiviteObjet.cpp  ActiviteObjet.hpp  ActiviteTestMouv.cpp  ActiviteTestMouv.hpp  Activity.cpp  Activity.hpp  FaireMouvement.cpp  FaireMouvement.hpp  InfoActivity.hpp  MoveTestActivity.cpp  MoveTestActivity.hpp  ObjectActivity.cpp  ObjectActivity.hpp  ReceiveClassLabel.hpp  Scenario.cpp  Scenario.hpp  ShapeActivity.cpp  ShapeActivity.hpp
src/Model/Senario/: Senario.cpp  (+4 more)
src/osc/: OscPacketListener.h  UdpSocket.cpp~  UdpSocket.h
videos/: Move_kinect.avi  applaudissements.avi
(+225 files in other folders)
